RAGの検索を追加

--- a/poc/.env.example
+++ b/poc/.env.example
@@ -32,6 +32,10 @@ CONVERSION_MODE=cloud_pdf
 # ====================
 # AWS S3 Vectors関連（RAG機能）
 # ====================
+# RAG機能の有効/無効（true/false、デフォルト: true）
+# falseに設定するとRAG検索をスキップし、従来の分析のみ実行
+USE_RAG=true
+
 # AWSリージョン（S3 Vectorsプレビュー対応リージョン）
 # 対応リージョン: us-west-2, us-east-1, us-east-2, eu-central-1, ap-southeast-2
 AWS_REGION=us-west-2
@@ -41,6 +45,10 @@ VECTOR_BUCKET_NAME=lisa-poc-vectors
 
 # ベクトルインデックス名
 VECTOR_INDEX_NAME=project-documents
+
+# AWS CLIプロファイル（オプション）
+# 複数のAWSアカウントを使用している場合に指定
+# AWS_PROFILE=your-profile-name
 
 # ====================
 # 開発/デバッグ設定
