code-reviewerのモデルを固定

--- a/poc/.env.example
+++ b/poc/.env.example
@@ -29,6 +29,18 @@ PROJECT_NAMES=*
 # 変換モード（cloud_pdf または text）
 CONVERSION_MODE=cloud_pdf
 
+# RAG専用モード（true/false、デフォルト: true）
+# trueに設定すると個別ファイル分析をスキップし、RAGインデックスのみから生成
+# falseに設定すると従来通り個別ファイル分析後にRAGで強化
+USE_RAG_ONLY_MODE=true
+
+# RAG専用モード時の検索パラメータ
+# より多くのドキュメントを取得するため、通常モードより大きな値を設定
+RAG_ONLY_MODE_K_CURRENT=15        # 現在のプロジェクトから取得する最大件数
+RAG_ONLY_MODE_K_SIMILAR=15        # 類似プロジェクトから取得する最大件数
+RAG_ONLY_MODE_MAX_TOTAL=30        # 合計最大件数
+RAG_ONLY_MODE_MIN_SCORE=0.3       # RAG専用モード時の最小類似度スコア（通常より緩い基準）
+
 # ====================
 # AWS S3 Vectors関連（RAG機能）
 # ====================
@@ -49,6 +61,34 @@ VECTOR_INDEX_NAME=project-documents
 # AWS CLIプロファイル（オプション）
 # 複数のAWSアカウントを使用している場合に指定
 # AWS_PROFILE=your-profile-name
+
+# ベクトル距離計算メトリック（cosine または euclidean、デフォルト: cosine）
+VECTOR_DISTANCE_METRIC=cosine
+
+# RAG検索の最小類似度スコア（0.0-1.0、デフォルト: 0.6）
+# この値以上の類似度を持つドキュメントのみを検索結果に含める
+# 値を高くするとハルシネーションが減るが、関連情報も減る可能性がある
+RAG_MIN_SCORE=0.6
+
+# ====================
+# RAG時系列重み付け設定
+# ====================
+# RAG検索結果のスコアリング方式（hybrid/reranking/time_decay/none、デフォルト: hybrid）
+#   hybrid      - 類似度と時間スコアを重み付けして統合（バランス型）
+#   reranking   - 類似度検索後、時間でソート（新しさ優先）
+#   time_decay  - 類似度に時間減衰を適用（類似度×減衰係数）
+#   none        - 時系列重み付けなし（類似度のみ）
+RAG_SCORING_METHOD=hybrid
+
+# ハイブリッド方式での時間の重み（0.0-1.0、デフォルト: 0.2）
+# 0.0 = 類似度のみ、1.0 = 時間のみ、0.2 = 類似度80%・時間20%
+# 値を大きくすると新しいドキュメントがより優先される
+RAG_TIME_WEIGHT=0.2
+
+# 時間減衰の半減期（日数、デフォルト: 90）
+# この日数経過後、時間スコアが約50%に減衰
+# 値を小さくすると古いドキュメントの重要性が急速に低下
+RAG_DECAY_DAYS=90
 
 # ====================
 # 開発/デバッグ設定
