タイムアウトの追加

--- a/poc/.env.example
+++ b/poc/.env.example
@@ -14,20 +14,11 @@ GEMINI_API_KEY=your-gemini-api-key-here
 #   gemini-2.5-flash-lite-preview-09-2025  - 最高速・最低コストの最新版
 GEMINI_MODEL=gemini-2.5-flash
 
-# 案件情報フォルダのID (Google Drive)
-# Google Driveで「案件情報」フォルダを開き、URLから取得
-# https://drive.google.com/drive/folders/XXXXXXXXXX ← この部分
-PROJECTS_FOLDER_ID=your-projects-folder-id
-
-# Google Drive一時フォルダID（オプション）
-# MS Office→PDF変換時の一時ファイル保存先
-GOOGLE_DRIVE_TEMP_FOLDER_ID=
-
-# 処理対象プロジェクト名（カンマ区切り、* で全て）
-PROJECT_NAMES=*
-
-# 変換モード（cloud_pdf または text）
-CONVERSION_MODE=cloud_pdf
+# ====================
+# プロジェクト設定
+# ====================
+# プロジェクトとデータソースの設定は project_config.yaml で管理します
+# 詳細は project_config.yaml.sample を参照してください
 
 # RAG専用モード時の検索パラメータ
 # より多くのドキュメントを取得するため、通常モードより大きな値を設定
