--- a/poc/requirements.txt
+++ b/poc/requirements.txt
@@ -14,3 +14,4 @@ reportlab  # Office形式→PDF変換用（オプション）
 tqdm  # 進捗表示用
 unstructured[pdf,md,docx,xlsx,pptx]
 langchain-text-splitters  # テキスト分割用
+func-timeout  # タイムアウト処理用
