RAGにドキュメントタイプの追加

--- a/poc/project_config.yaml
+++ b/poc/project_config.yaml
@@ -42,3 +42,94 @@ projects:
     google_drive:
       - "17JFBa7uLGUzCjhckdpPmFpbYkavTnzSQ"
 
+# グローバルオプション設定
+options:
+  # Google Drive設定
+  google_drive:
+    max_file_size: 30  # MB
+
+  # ドキュメント分類設定
+  document_categories:
+    # 営業関連ドキュメント
+    sales:
+      - "NDA"  # 秘密保持契約書
+      - "ヒアリングシート"
+      - "討議資料"
+      - "議事録"
+      - "非公式コミュニケーションログ"  # Slack、電話メモ等
+      - "提案書"
+      - "提案ベース見積書"
+      - "セキュリティチェックシート"
+      - "正式見積書"
+      - "契約書"
+      - "稼働実績表"
+      - "完了報告書"
+      - "請求書"
+
+    # 開発関連ドキュメント
+    development:
+      - "技術調査資料"
+      - "基本設計書"
+      - "詳細設計書"
+      - "テーブル定義書"
+      - "データ加工仕様書"
+      - "実装計画書"  # WBS
+      - "開発成果物"
+      - "テスト結果報告書"
+
+    # 顧客関連ドキュメント
+    customer:
+      - "RFP"  # 提案依頼書
+      - "要件定義書"
+      - "注文書"
+      - "承認書"
+      - "検収書"
+
+    # その他
+    other:
+      - "その他"
+
+  # LLM分類用の統合カテゴリリスト（優先順位順）
+  classification_categories:
+    - "RFP"  # 提案依頼書・要件定義書
+    - "ヒアリングシート"  # ヒアリングシート・討議資料
+    - "提案書"
+    - "見積書"  # 提案ベース見積書・正式見積書
+    - "契約書"  # 契約書・NDA・注文書
+    - "設計書"  # 基本設計書・詳細設計書・アーキテクチャ設計書
+    - "仕様書"  # テーブル定義書・データ加工仕様書・要件定義書
+    - "実装計画書"  # WBS
+    - "テスト結果報告書"
+    - "セキュリティチェックシート"
+    - "議事録"
+    - "技術調査資料"
+    - "稼働実績表"
+    - "完了報告書"
+    - "請求書"
+    - "承認書"
+    - "検収書"
+    - "非公式コミュニケーションログ"
+    - "その他"
+
+  # カテゴリ判定用の説明（LLMプロンプト用）
+  category_descriptions:
+    "RFP": "顧客からの提案依頼書。要求事項、システム要件、評価基準等が記載されている。"
+    "ヒアリングシート": "顧客への質問項目をまとめた資料。要件ヒアリングの準備や記録。"
+    "提案書": "顧客への提案内容をまとめた資料。ソリューション、体制、スケジュール、概算費用等を含む。"
+    "見積書": "プロジェクトの費用見積もり。提案ベース見積書または正式見積書。"
+    "契約書": "業務委託契約書、NDA、注文書等の法的文書。"
+    "設計書": "基本設計書、詳細設計書、アーキテクチャ設計書等のシステム設計資料。"
+    "仕様書": "テーブル定義書、データ加工仕様書、要件定義書等の詳細仕様。"
+    "実装計画書": "WBS、タスクリスト、スケジュール等の実装計画。"
+    "テスト結果報告書": "テスト実施結果、バグ報告等。"
+    "セキュリティチェックシート": "セキュリティ要件のチェックリストと回答。"
+    "議事録": "会議の記録、決定事項、ToDo、課題等。"
+    "技術調査資料": "技術的な調査・検証結果をまとめた資料。"
+    "稼働実績表": "プロジェクトメンバーの稼働時間記録。"
+    "完了報告書": "プロジェクト完了の報告資料。"
+    "請求書": "顧客への請求書類。"
+    "承認書": "設計書等に対する顧客の承認文書。"
+    "検収書": "成果物の受入検収を証明する文書。"
+    "非公式コミュニケーションログ": "Slack、電話メモ等の非公式なコミュニケーション記録。"
+    "その他": "上記カテゴリに該当しないドキュメント。"
+
