ドキュメント生成

--- a/poc/.env.example
+++ b/poc/.env.example
@@ -55,25 +55,54 @@ VECTOR_DISTANCE_METRIC=cosine
 # 値を高くするとハルシネーションが減るが、関連情報も減る可能性がある
 RAG_MIN_SCORE=0.6
 
-# ====================
-# RAG時系列重み付け設定
-# ====================
-# RAG検索結果のスコアリング方式（hybrid/reranking/time_decay/none、デフォルト: hybrid）
-#   hybrid      - 類似度と時間スコアを重み付けして統合（バランス型）
-#   reranking   - 類似度検索後、時間でソート（新しさ優先）
-#   time_decay  - 類似度に時間減衰を適用（類似度×減衰係数）
-#   none        - 時系列重み付けなし（類似度のみ）
+# ========================================
+# RAG-Fusion設定
+# ========================================
+
+# RAG-Fusionを有効化（true/false）
+USE_RAG_FUSION=true
+
+# 生成するクエリ数（デフォルト: 3）
+RAG_FUSION_NUM_QUERIES=3
+
+# RRFパラメータ（デフォルト: 60）
+# 値が大きいほど、順位の差を小さく扱う
+RAG_FUSION_RRF_K=60
+
+# ========================================
+# ハイブリッドスコアリング設定
+# ========================================
+
+# スコアリング方式
+# - hybrid: 類似度と時間スコアを重み付け統合（推奨）
+# - time_decay: 類似度に時間減衰を乗算
+# - reranking: 類似度で検索後、時間でソート
+# - none: 類似度のみ
 RAG_SCORING_METHOD=hybrid
 
-# ハイブリッド方式での時間の重み（0.0-1.0、デフォルト: 0.2）
-# 0.0 = 類似度のみ、1.0 = 時間のみ、0.2 = 類似度80%・時間20%
-# 値を大きくすると新しいドキュメントがより優先される
+# 時間スコアの重み（0.0-1.0、デフォルト: 0.2）
+# 0.2 = 類似度80% + 時間20%
 RAG_TIME_WEIGHT=0.2
 
 # 時間減衰の半減期（日数、デフォルト: 90）
-# この日数経過後、時間スコアが約50%に減衰
-# 値を小さくすると古いドキュメントの重要性が急速に低下
+# 90日経過で時間スコアが50%に減衰
 RAG_DECAY_DAYS=90
+
+# 最小類似度スコア（0.0-1.0、デフォルト: 0.3）
+RAG_ONLY_MODE_MIN_SCORE=0.3
+
+# ========================================
+# k値設定（取得件数）
+# ========================================
+
+# 現在のプロジェクトから取得する件数
+RAG_ONLY_MODE_K_CURRENT=30
+
+# 類似プロジェクトから取得する件数
+RAG_ONLY_MODE_K_SIMILAR=30
+
+# 合計最大件数
+RAG_ONLY_MODE_MAX_TOTAL=60
 
 # ====================
 # 開発/デバッグ設定
