--- a/poc/project_config.yaml
+++ b/poc/project_config.yaml
@@ -38,11 +38,6 @@ projects:
 #    google_drive:
 #      - "1MpMfW_5mEHJkPjtlTgyglb5EYFEih2Uc"
 
-  ユニ・チャーム（CSA）:
-    google_drive:
-      - "17JFBa7uLGUzCjhckdpPmFpbYkavTnzSQ"
-      - "1Y9aDKbWCLiAyJCNg-aHVb4TIHyrYl5ev"
-
 #  SUBARU:
 #    google_drive:
 #      - "1IRYqUf-wpMKp450QG8-UjT7ez4miDcES"
@@ -51,6 +46,11 @@ projects:
 #    google_drive:
 #      - "1h8GVoMQdxPd-hhRMsyv6ayGKsNA-etpo"
 #
+#  ユニ・チャーム（CSA）:
+#    google_drive:
+#      - "17JFBa7uLGUzCjhckdpPmFpbYkavTnzSQ"
+#      - "1Y9aDKbWCLiAyJCNg-aHVb4TIHyrYl5ev"
+#
 #  ユーシーカード（CSA）:
 #    google_drive:
 #      - "1o4nk7FqfKFtNUvsXgi867N0Z41ATZjW-"
@@ -58,6 +58,15 @@ projects:
 #  大正製薬（CSA）:
 #    google_drive:
 #      - "1Dr5Z_F7S8O1g2Esvur4QVJG19kKX4AEj"
+
+#  コクヨ:
+#    google_drive:
+#      - "1Dg7Ra5osBM5gvaCvKUudaXf4uiZUVQug"
+#      - "1kL3FqFUvJbldTCkHmv9PkQFfQ7eZ0bNU"
+
+  LISAテスト1:
+    google_drive:
+      - "1cxP8tNPWHcXWFug0yZ7Iu5BgFID7hpW6"
 
 # グローバルオプション設定
 options:
