--- a/poc/.env.example
+++ b/poc/.env.example
@@ -6,13 +6,13 @@
 # Gemini API キー（必須）
 GEMINI_API_KEY=your-gemini-api-key-here
 
-# Gemini モデル (Generative Language API、オプション、デフォルト: gemini-2.5-flash)
+# Gemini モデル (Generative Language API、オプション、デフォルト: gemini-2.5-pro )
 #   gemini-2.5-pro                - 最高品質の推論能力（フラッグシップ）
 #   gemini-2.5-flash              - 推奨: 価格とパフォーマンスのベストバランス
 #   gemini-2.5-flash-lite         - 最高速・最低コスト
 #   gemini-2.5-flash-preview-09-2025           - 価格とパフォーマンスのベストバランスの最新版
 #   gemini-2.5-flash-lite-preview-09-2025  - 最高速・最低コストの最新版
-GEMINI_MODEL=gemini-2.5-flash
+GEMINI_MODEL=gemini-2.5-pro
 
 # ====================
 # プロジェクト設定
