--- a/poc/project_config.yaml
+++ b/poc/project_config.yaml
@@ -61,6 +61,10 @@ projects:
     google_drive:
       - "1DG2XiwTn-v0SOZbzbi2YrU1KAxVPipph"
 
+#  LISA_DUMMY:
+#    google_drive:
+#      - "1cWaCwGFTyevC7Y_TS2qi-aLkwJR2u6Dd"
+
 #  ユニ・チャーム（CSA）:
 #    google_drive:
 #      - "17JFBa7uLGUzCjhckdpPmFpbYkavTnzSQ"
